--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,9 +6,6 @@ on:
     branches: [main]
     types:
       - completed
-  push:
-    branches:
-      - "main"
     tags:
       - "v*.*.*"
 
@@ -16,18 +13,9 @@ jobs:
   release:
     runs-on: ubuntu-20.04
     steps:
-      - name: checkout code
-        uses: actions/checkout@v3
-
-      - name: Release new changes
-        uses: fregante/release-with-changelog@v3
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 50
+      - uses: fregante/release-with-changelog@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          exclude: '^Meta'
-          commit-template: '- {title} ← {hash}'
-          template: |
-            ### Changelog
-            
-            {commits}
-            
-            {range}
